--- a/Configuration Files/AngelChest/config.yml
+++ b/Configuration Files/AngelChest/config.yml
@@ -66,6 +66,8 @@
 #                            Prints plugin version, whether you have the Plus version and what server software
 #                            you are using.
 
+# Note: You can add new command aliases, see "Command Settings" at about line 800 in this config.yml
+
 ############################
 #####   Information    #####
 ############################
@@ -108,11 +110,21 @@ unlock-duration: 0
 
 # The maximum amount of AngelChests a player may have at the same time.
 # If a player dies again so that they would exceed this number, the
-# first created AngelChest is destroyed and drops its contents.
+# first created AngelChest is either destroyed or drops its contents.
+# (See option below)
 # You can override this for certain players by setting up groups
 # and giving players the angelchest.group.<groupname> permission.
 # See groups.example.yml for more information.
 max-allowed-angelchests: 5
+
+# When a player has reached the above defined "max-allowed-angelchests" limit,
+# their oldest AngelChest is either destroyed (without dropping its contents)
+# or dropping all its contents.
+# When set to "drop", the oldest AngelChest will drop its contents once the
+# limit is reached.
+# When set to "delete", the oldest AngelChest will disappear without dropping
+# anything
+max-allowed-angelchests-behaviour: drop
 
 # When true, the AngelChest drops its contents when it expires
 # When false, all contents disappear
@@ -159,6 +171,9 @@ spawn-chance: 1.0
 # PREMIUM FEATURE: ONLY AVAILABLE IN AngelChest Plus!
 random-item-loss: 0
 
+# When true, all items that would be lost due to "random-item-loss" will be dropped instead of just be removed
+random-item-loss-drop: false
+
 # When set to true, the random-item-loss defined above will NOT apply to enchanted items!
 # That means that enchanted items will always be stored in the AngelChest regardless of random item loss chance.
 random-item-loss-ignores-enchanted-items: false
@@ -192,23 +207,26 @@ only-show-gui-after-death-if-player-can-tp-or-fetch: true
 
 # You can choose the Material to use for the AngelChest,
 # e.g. CHEST, ENDER_CHEST, OBSIDIAN, ...
-# It's also possible to use custom heads here, or custom
-# blockdata, or even blocks from ItemsAdder.
-# See here for more information: https://wiki.jeff-media.com/books/general-information/page/custom-blocks
+# It's also possible to use custom heads here, or custom blockdata, or even blocks from ItemsAdder and Oraxen.
+#
+# IMPORTANT: ItemsAdder & Oraxen integration is still EXPERIMENTAL and WILL bug out for furniture!
+#            Do NOT use ItemsAdder or Oraxen blocks and/or furniture on a production server!
+#
+# IMPORTANT: You must use "double quotes" here!
+#
 # Examples:
-#  material: DIRT (will use a dirt block)
-#  material: head:player (will use the player's head)
-#  material: head:somebase64string (will use that custom base64 texture)
-#  material: minecraft:RED_CANDLES[amount=3,lit=true] (will use 3 red, lit candles)
-#  material: itemsadder:ruby_ore (will use Ruby Ore from ItemsAdder)
-material: CHEST
+#  material: "DIRT"                                     (will use a dirt block)
+#  material: "head:player"                              (will use the player's head)
+#  material: "head:somebase64string"                    (will use that custom base64 texture)
+#  material: "minecraft:red_candle[candles=3,lit=true]" (will use 3 red, lit candles)
+#  material: "itemsadder:ruby_ore"                      (will use Ruby Ore from ItemsAdder)
+#  material: "oraxen:ruby_ore"                          (will use Ruby Ore from Oraxen)
+material: "CHEST"
 
-# You can choose another Material to use for unlocked
-# AngelChests.
-# See here for more information: https://wiki.jeff-media.com/books/general-information/page/custom-blocks
+# You can choose another Material to use for unlocked AngelChests.
 # PREMIUM FEATURE: ONLY AVAILABLE IN AngelChest Plus!
 use-different-material-when-unlocked: false
-material-unlocked: ENDER_CHEST
+material-unlocked: "ENDER_CHEST"
 
 # When true, AngelChest will spawn the chest at the last location where a player was standing
 # before he died in the void. When false, the chest will spawn at Y=1
@@ -318,7 +336,24 @@ async-chunk-loading: true
 check-for-updates: true
 
 # When check-for-updates is true, AngelChest will check every X hours
-check-interval: 4
+check-interval: 24
+
+#########################
+####   Death maps    ####
+#########################
+
+# You can make players get a map with their AngelChest location when they respawn.
+# This allows them to easily go back to their death location.
+# PREMIUM FEATURE: ONLY AVAILABLE IN AngelChest Plus!
+death-maps: false
+
+# You can change the marker type to be used. See here for a list of valid marker types in the latest MC version:
+# https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/map/MapCursor.Type.html
+# PREMIUM FEATURE: ONLY AVAILABLE IN AngelChest Plus!
+death-map-marker: RED_X
+
+death-map-name: "AngelChest"
+death-map-lore: "X: {x}\nY: {y}\nZ: {z}"
 
 #########################
 ####   Player heads  ####
@@ -353,6 +388,14 @@ dont-store-heads-in-angelchest: true
 # individual graveyards in the graveyards.yml file. You must rename the
 # graveyards.example.yml file to graveyards.yml to enable Graveyard features.
 
+# When enabled, player's AngelChests will NOT be spawned in the graveyards, but
+# at their death location. The graveyards will then only be used to respawn players
+# after they died. All defined "grave locations" will then be used as possible
+# respawn points, unless a global spawn has been set for that graveyard.
+# When this is enabled, players will also respawn at graveyards even when
+# they didn't get an AngelChest because their inventory was empty.
+use-graveyard-only-as-respawn-point: false
+
 # What happens when the closest graveyard in the current world is full?
 # When true, AngelChest will search for the next graveyard in the same world.
 # When false, or when all graveyards in this world are full, see option below
@@ -379,8 +422,10 @@ fallback-to-deathlocation: true
 # leave a message in the SpigotMC discussion or open an issue at GitHub.
 # If you request a feature in the review section, it will probably be ignored.
 # You can also adjust those prices individually for each group. See groups.example.yml
+
 # You can also add the letter "p" to the end of the number to use percentages.
 # E.g. when using "0.2p", a user has to pay 20% of his account balance.
+# PREMIUM FEATURE: ONLY AVAILABLE IN AngelChest Plus!
 
 # You can also use certain items that have to be "paid" with instead of money.
 # See items.yml file for more information
@@ -590,9 +635,16 @@ lands-dont-protect-when-at-war: false
 # to the highest possible value where it still works.
 ignore-keep-inventory: false
 
+# If set to true, AngelChest will try to only spawn chests INSIDE the world border as dictated by WorldBorderAPI.
+# If set to false, AngelChest doesn't care about what WorldBorderAPI says.
+use-worldborder-api: true
+
+# When true, players who are currently in combat cannot fast-loot AngelChests
+combatlogx-prevent-fastlooting: false
+
 # You can define the priority on which AngelChest detects the player's drops. When you use plugins to
 # manipulate what items a player drops on death, consider setting this to a high value (e.g. HIGHEST
-# or MONITOR.
+# or MONITOR).
 # If you experience problems with some items not being put into the chest but being dropped next to it,
 # try to lower the priority of AngelChest until the drops get detected.
 # If you have problems with the chest not spawning at all (but remaining in the player's inventory),
@@ -768,14 +820,13 @@ prefix: "&b[&aAngelChest&b] &r"
 
 # Commands that can be used instead of /acgui
 command-aliases-acgui:
-  - ac
-  - angelchest
-  - angelchests
   - angelchestgui
 
 # Commands that can be used instead of /aclist
 command-aliases-aclist:
   - acinfo
+  - ac
+  - angelchest
   - angelchestinfo
   - angelchestlist
 
@@ -1558,51 +1609,51 @@ message-has-no-item2: "&cAn Angel tried to collect your stuff but you didn't hav
 #message-has-no-item2: "&cAnioł próbował podnieść twoje itemy, lecz nie miałeś żadnego {item}&r&c."
 
 ##### Portuguese
-#message-all-your-angelchests-were-already-unlocked: "&eTodos os seus AngelChests estavam desbloqueados."
-#message-angelchest-created: "&aUm anjo coletou seus itens e os guardou dentro de um baú no local de sua morte."
-#message-angelchest-disappeared: "&cVocê foi muito lento... Seu AngelChest desapareceu e jogou seus itens no chão."
-#message-error-players-only: "&cErro: Esse comando só funciona com jogadores."
-#message-inventory-was-empty: "&eUm anjo procurou por suas coisas, mas não encontrou nada."
-#message-not-allowed-to-break-other-angelchests: "&cYou are not allowed to break this AngelChest."
-#message-not-allowed-to-open-other-angelchests: "&cYou are not allowed to open this AngelChest."
-#message-unlocked-more-angelchests: "&aVocê abriu o AngelChest de %d."
-#message-unlocked-one-angelchest: "&aVocê abriu o seu AngelChest."
-#message-you-dont-have-any-angelchests: "&eVocê não tem nenhum AngelChest."
-#message-you-got-part-of-your-inventory-back: "&eVocê conseguiu uma parte do seu inventário de volta, mas alguns itens ainda estão no AngelChest."
+#message-all-your-angelchests-were-already-unlocked: "&eTodos os seus Baús Angelicais já estavam destrancados."
+#message-angelchest-created: "&aUm Anjo coletou suas coisas e as colocou em um baú no local de sua morte."
+#message-angelchest-disappeared: "&cVocê foi muito lento... Seu Baú Angelical desapareceu e dropou seu conteúdo"
+#message-error-players-only: "&cErro: Esse comando só pode ser usado por jogadores."
+#message-inventory-was-empty: "&eUm Anjo procurou por suas coisas, mas não conseguiu encontrar algo."
+#message-not-allowed-to-break-other-angelchests: "&cVocê não tem permissão para quebrar este Baú Angelical."
+#message-not-allowed-to-open-other-angelchests: "&cVocê não tem permissão para abrir este Baú Angelical."
+#message-unlocked-more-angelchests: "&aVocê abriu o Baú Angelical de %d."
+#message-unlocked-one-angelchest: "&aVocê abriu o seu Baú Angelical."
+#message-you-dont-have-any-angelchests: "&eVocê não tem nenhum Baú Angelical."
+#message-you-got-part-of-your-inventory-back: "&eVocê recuperou parte do seu inventário, mas alguns itens ainda estão no Baú Angelical."
 #message-you-got-your-inventory-back: "&aVocê recuperou seu inventário!"
-#message-angelchest-location: "&eLocal do seu AngelChest:"
-#message-not-enough-money: "&cYou don't have enough money."
-#message-not-enough-money2: "&cAn Angel tried to collect your stuff but you didn't have enough money."
-#message-please-select-chest: "&7Please specify which AngelChest you would like to select."
-#message-already-unlocked: "&cThis AngelChest is already unlocked."
-#message-too-many-angelchests: "&cYou had more AngelChests than your Angel could handle... Your oldest AngelChest has exploded."
-#message-no-angelchest-in-pvp: "&cAn Angel tried to collect your stuff but was put to flight by the presence of your killer."
-#message-angelchest-retrieved: "&aAngelChest retrieved!"
-#message-confirm: "&6You are about to spend {price}{currency}. Click this message to continue."
-#message-paid-open: "&8You spent {price}{currency} to open an AngelChest."
-#message-unlocked-automatically: "&8Your AngelChest has been unlocked automatically."
-#message-angelchest-opened: "&6{player} has opened your AngelChest."
-#message-angelchest-emptied: "&c{player} has emptied your AngelChest."
-#message-spawn-chance-unsuccessful: "&cYour Angel forgot to collect your stuff, unlucky!"
-#message-no-permission: "&cYou do not have the permission to use this command."
-#message-invulnerable: "&a&lYou are invulnerable for {time}."
-#message-vulnerable: "&c&lYou are no longer invulnerable."
-#message-tp-across-worlds-not-allowed: "&cYou cannot teleport to your AngelChest across worlds."
-#message-fetch-across-worlds-not-allowed: "&cYou cannot fetch your AngelChest across worlds."
-#message-max-tp-distance: "&cYou cannot teleport to AngelChests more than {distance} blocks away."
-#message-max-fetch-distance: "&cYou cannot fetch AngelChests more than {distance} blocks away."
-#message-angelchest-disabled: "&cYou are no longer protected by Angels."
-#message-angelchest-enabled: "&aYou are now protected by Angels."
-#message-angelchest-fetched: "&aAngelChest fetched succesfully."
-#message-angelchest-teleported: "&aSuccessfully teleported you to your AngelChest."
-#message-min-distance: "&cYou already are nearby your AngelChest."
-#message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
-#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
-#message-teleporting: "&aTeleporting to AngelChest..."
-#message-angelchest-disabled-others: "&c{player} is no longer protected by Angels."
-#message-angelchest-enabled-others: "&a{player} is now protected by Angels."
-#message-has-no-item: "&cYou need at least one {item}&r&c to do this."
-#message-has-no-item2: "&cAn Angel tried to collect your stuff but you didn't have any {item}&r&c."
+#message-angelchest-location: "&eLocalizações dos seus Baús Angelicais:"
+#message-not-enough-money: "&cVocê não tem dinheiro suficiente."
+#message-not-enough-money2: "&cUm anjo tentou coletar suas coisas, mas você não tinha dinheiro suficiente."
+#message-please-select-chest: "&7Por favor, especifique qual Baú Angelical você gostaria de selecionar."
+#message-already-unlocked: "&cEste Baú Angelical já está destrancado."
+#message-too-many-angelchests: "&cVocê tinha mais Baús Angelicais do que seu Anjo poderia suportar... Seu Baú Angelical mais antigo explodiu."
+#message-no-angelchest-in-pvp: "&cUm Anjo tentou coletar suas coisas, mas foi afugentado pela presença de seu assassino."
+#message-angelchest-retrieved: "&aBaú Angelical recuperado!"
+#message-confirm: "&6Você está prestes a gastar {price}{currency}. Clique nesta mensagem para continuar."
+#message-paid-open: "&8Você gastou {price}{currency} para abrir um Baú Angelical."
+#message-unlocked-automatically: "&8Seu Baú Angelical foi desbloqueado automaticamente."
+#message-angelchest-opened: "&6{player} abriu seu Baú Angelical."
+#message-angelchest-emptied: "&c{player} esvaziou seu Baú Angelical."
+#message-spawn-chance-unsuccessful: "&cSeu anjo esqueceu de pegar suas coisas, infelizmente!"
+#message-no-permission: "&cVocê não tem permissão para usar este comando."
+#message-invulnerable: "&a&lVocê está invulnerável por {time}."
+#message-vulnerable: "&c&lVocê não está mais invulnerável."
+#message-tp-across-worlds-not-allowed: "&cVocê não pode teleportar para o seu Baú Angelical através dos mundos."
+#message-fetch-across-worlds-not-allowed: "&cVocê não pode mover seu Baú Angelical através dos mundos."
+#message-max-tp-distance: "&cVocê não pode teleportar para Baús Angelicais a mais de {distance} blocos."
+#message-max-fetch-distance: "&cVocê não pode trazer Baús Angelicais a mais de {distance} blocos."
+#message-angelchest-disabled: "&cVocê não está mais protegido pelos Anjos"
+#message-angelchest-enabled: "&aVocê agora está protegido pelos Anjos."
+#message-angelchest-fetched: "&aBaú Angelical entregue com sucesso."
+#message-angelchest-teleported: "&aTeleportado com sucesso para o seu Baú Angelical."
+#message-min-distance: "&cVocê já está perto do seu Baú Angelical."
+#message-buried-in-graveyard: "&aUm anjo recolheu suas coisas e as enterrou em &6{graveyard}."
+#message-cant-fetch-here: "&cVocê não pode trazer seu Baú Angelical para cá."
+#message-teleporting: "&aTeleportando para Baú Angelical..."
+#message-angelchest-disabled-others: "&c{player} não está mais protegido pelos Anjos."
+#message-angelchest-enabled-others: "&a{player} agora está protegido pelos Anjos."
+#message-has-no-item: "&cVocê precisa de pelo menos um {item}&r&c para fazer isso."
+#message-has-no-item2: "&cUm Anjo tentou coletar suas coisas, mas você não tinha nenhum {item}&r&c."
 
 ##### Russian - Thanks to @GEEK for translating
 #message-all-your-angelchests-were-already-unlocked: "&eВсе ваши Ангельские сундуки разблокированы."
