--- a/Configuration Files/AngelChest/config.yml
+++ b/Configuration Files/AngelChest/config.yml
@@ -1655,6 +1655,48 @@ message-has-no-item2: "&cAn Angel tried to collect your stuff but you didn't hav
 #message-has-no-item: "&cVocê precisa de pelo menos um {item}&r&c para fazer isso."
 #message-has-no-item2: "&cUm Anjo tentou coletar suas coisas, mas você não tinha nenhum {item}&r&c."
 
+##### Romanian (Română) 
+#message-all-your-angelchests-were-already-unlocked: "Toate Angel Chest-urile tale au fost deja deblocate."
+#message-angelchest-created: "&aUn inger ti-a colectat itemele si le-a asezat intr-un chest in locatia mortii tale."
+#message-angelchest-disappeared: "&cTe-ai miscat prea incet, Angel Chest-ul tau a disparut si si-a dropat itemele pe jos."
+#message-error-players-only: "&cEroare: Aceasta comanda poate fi folosita doar ca jucator."
+#message-inventory-was-empty: "&eUn inger ti-a cautat itemele, dar nu a gasit nimic."
+#message-not-allowed-to-break-other-angelchests: "&cNu ai permisiunea sa spargi acest AngelChest."
+#message-not-allowed-to-open-other-angelchests: "&cNu ai permisiunea sa deschizi acest AngelChest."
+#message-unlocked-more-angelchests: "&aAi deblocat %d AngelChest-uri."
+#message-unlocked-one-angelchest: "&aTi-ai deblocat AngelChest-ul tau."
+#message-you-dont-have-any-angelchests: "&eNu ai niciun AngelChest."
+#message-you-got-part-of-your-inventory-back: "&eAi primit o parte din itemele tale in inventar, dar celalalte au ramas in AngelChest-ul tau."
+#message-you-got-your-inventory-back: "&aTi-ai primit inventarul inapoi!"
+#message-angelchest-location: "&eLocatiile AngelChest-urilor tale:"
+#message-not-enough-money: "&cNu ai destui bani."
+#message-not-enough-money2: "&cUn inger a incercat sa iti colecteze itemele, dar nu ai destui bani."
+#message-please-select-chest: "&7Te rog specifica ce AngelChest ai dori sa il selectezi."
+#message-already-unlocked: "&cAcest AngelChest deja este deblocat."
+#message-too-many-angelchests: "&cAi avut mai multe AngetChest-uri decat a putut sa tina un inger... Cel mai vechi AngelChest al tau a explodat."
+#message-no-angelchest-in-pvp: "&cUn inger a incercat sa iti ia itemele, dar a fost speriat de prezenta ucigasului tau."
+#message-angelchest-retrieved: "&aAngelChest recuperat!"
+#message-confirm: "&6Esti pe cale sa cheltui {price}{currency}. Click pe acest mesaj pentru a continua."
+#message-paid-open: "&8Ai cheltuit {price}{currency} pentur a deschide un AngelChest."
+#message-unlocked-automatically: "&8AngelChest-ul tau a fost deblocat automat."
+#message-angelchest-opened: "&6{player} ti-a deschis AngelChest-ul tau."
+#message-angelchest-emptied: "&c{player} ti-a golit AngelChest-ul tau."
+#message-spawn-chance-unsuccessful: "&cIngerul tau a uitat sa iti stranga itemele, ghinion!"
+#message-no-permission: "&cNu ai permisiune pentru a utiliza aceasta comanda."
+#message-invulnerable: "&a&lEsti invulnerabil pentru {time}."
+#message-vulnerable: "&c&lNu mai esti invulnerabil."
+#message-tp-across-worlds-not-allowed: "&cNu te poti teleporta la AngelChest-ul tau de pe alta lume."
+#message-fetch-across-worlds-not-allowed: "&cNu iti poti aduce AngelChest-ul tau din alta lume."
+#message-max-tp-distance: "&cNu te poti teleporta la AngelChest-ul de la o distanta de {distance} block-uri departare."
+#message-max-fetch-distance: "&cNu iti poti aduce AngelChest-ul care se afla la o distanta de {distance} block-uri departare."
+#message-angelchest-disabled: "&cNu mai esti protejat de ingeri."
+#message-angelchest-enabled: "&aAcum esti protejat de ingeri."
+#message-angelchest-fetched: "&aAngelChest-ul a fost adus la tine cu succes."
+#message-angelchest-teleported: "&aTe-ai teleportat cu succes la AngelChest-ul tau."
+#message-min-distance: "&cDeja esti aproape de AngelChest-ul tau."
+#message-buried-in-graveyard: "&aUn inger ti-a luat itemele si le-a ingropat la &6{graveyard}."
+#message-cant-fetch-here: "&cNu iti poti aduce AngelChest-ul tau aici."
+
 ##### Russian - Thanks to @GEEK for translating
 #message-all-your-angelchests-were-already-unlocked: "&eВсе ваши Ангельские сундуки разблокированы."
 #message-angelchest-created: "&aАнгел собрал ваши вещи и положил в сундук на месте смерти."
