--- a/Configuration Files/Drop2Inventory/config.yml
+++ b/Configuration Files/Drop2Inventory/config.yml
@@ -321,6 +321,13 @@ message-inventory-full: "&cYour inventory is full."
 #message-when-breaking-block2: "&7提示: 输入 &6/drop2inventory&7 或 &6/drop2inv&7 以关闭自动掉落物收集."
 #message-inventory-full: "&cYour inventory is full."
 
+##### Dutch
+#message-disabled: "&7Automatische drop-collectie is &cuitgeschakeld&7."
+#message-enabled: "&7Automatisch verzamelen van drop-outs is &ingeschakeld&7."
+#message-when-breaking-block: "&7Hint: Typ &6/drop2inventory&7 of &6/drop2inv&7 om automatische drop-collectie in te schakelen."
+#message-when-breaking-block2: "&7Hint: Typ &6/drop2inventory&7 of &6/drop2inv&7 om het automatisch verzamelen van drop-outs uit te schakelen."
+#message-inventory-full: "&cJe inventaris is vol."
+
 ##### German
 #message-disabled: "&7Automatisches Einsammeln &cdeaktiviert&7."
 #message-enabled: "&7Automatisches Einsammeln &aaktiviert&7."
